# Analysoo

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  folder_structure.txt  heroku.yml
backend/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  test.txt
backend/BreakWordTrapsBackend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/video_processing/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/video_processing/analysis/: __init__.py  audio_analysis.py  openai_utils.py  text_analysis.py  utils.py  video_analysis.py
backend/video_processing/migrations/: 0001_initial.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatTimeline.tsx  Form.tsx  Results.tsx  VideoPlayer.tsx  VideoTimeline.css
frontend/src/components/providers/: QueryProvider.tsx
frontend/src/components/timeline/: Cursor.tsx  Tag.tsx  Timeline.tsx
frontend/src/types/: TagData.ts
