[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michał Jagoda <michal-jagoda@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
redis = "^5.1.0"
celery = "^5.4.0"
openai = "^1.50.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
